--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
+
+    <!--Application Name-->
     <string name="app_name">Sama</string>
+
+    <!--Action Bar Item Name-->
+    <string name="action_refresh">Refresh</string>
+
 </resources>
